Proyecto terminado CineFlix en su esplendor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.proyecto"
+        applicationId "com.CineFlix.proyecto"
         minSdk 28
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName "1.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
